# c4c-esp32-logger

./: .gitmodules  README.md  boot.py  main.py  network.py
api/: .coffee_api.yaml.swp  coffee_api.yaml
api/coffeecloud-rest-api-client/: README.md  app.py  pyproject.toml
api/coffeecloud-rest-api-client/coffeecloud_rest_api_client/: __init__.py
api/coffeecloud-rest-api-client/coffeecloud_rest_api_client/api/: __init__.py
api/coffeecloud-rest-api-client/coffeecloud_rest_api_client/api/machine/: home_call.py  register_machine.py
api/coffeecloud-rest-api-client/coffeecloud_rest_api_client/api/portal/: activate_machine.py  deactivate_machine.py  get_location_details.py  get_machine_details.py  get_organisation_details.py  get_paginated_inactive_machines.py  get_paginated_location_machines.py  get_paginated_machines.py  get_paginated_organisations.py  search_organisations.py  search_paginated_location_machines.py
api/coffeecloud-rest-api-client/coffeecloud_rest_api_client/models/: __init__.py  get_paginated_inactive_machines_response_200.py  get_paginated_location_machines_response_200.py  get_paginated_machines_response_200.py  get_paginated_organisations_response_200.py  search_organisations_response_200.py  search_paginated_location_machines_response_200.py
app/: main.py  test_leds.py
app/certs/: ca.crt
app/config/: default.json
app/main/: coffeecloud.py  config.py  httpclient.py  main.py  main_test.py  ota_updater.py  reattach_repl.py  (+2 more)
config/: urls.py
docs/: Application.ipynb  c4c-esp32-logger.ipynb
lib/: README.md
tmp/: blink.py  test.py
(+9 files in other folders)
